RESOLVED FIXED255946
Web Inspector: private symbols should not be shown in the scope chain
https://bugs.webkit.org/show_bug.cgi?id=255946
Summary Web Inspector: private symbols should not be shown in the scope chain
Devin Rousso
Reported 2023-04-25 12:18:29 PDT
# STEPS TO REPRODUCE 1. inspect any page 2. evaluate in Web Inspector ``` (new class { #x = 42; test() { debugger; } }).test() ``` ## EXPECTED the scope chain details sidebar panel would be empty ## ACTUAL there is a property named "#x" with a value of `Symbol()`
Attachments
Devin Rousso
Comment 1 2023-04-25 12:28:15 PDT
EWS
Comment 2 2023-04-28 13:08:13 PDT
Committed 263513@main (d1eb17d9b5dc): <https://commits.webkit.org/263513@main> Reviewed commits have been landed. Closing PR #13163 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-28 13:09:24 PDT
Note You need to log in before you can comment on or make changes to this bug.